--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ permalink: /posts/:title.html
 excerpt_separator: "<!-- more -->"
 
 github: panxw
-author: "潘学文"
+author: "夏中柱"
 email: winfirm#163.com
-name: "潘学文个人博客"
+name: "夏中柱个人博客"
 url: http://www.panxw.com
 domain: www.panxw.com
 all_categories: [
